tests/snapshots/python_parity_unit_snapshots__dropin_20_hardening_kvm_off.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: "dropin(&r.drop_ins, \"20-hardening.conf\")"
---
[Service]
DeviceAllow=
