tests/snapshots/python_parity_unit_snapshots__dropin_20_hardening_strict.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: "dropin(&r.drop_ins, \"20-hardening.conf\")"
---
[Service]
DeviceAllow=/dev/kvm rw
RestrictRealtime=yes
ProtectControlGroups=yes
RestrictSUIDSGID=yes
PrivateDevices=yes
PrivateIPC=yes
RestrictAddressFamilies=AF_INET AF_UNIX
SystemCallFilter=chroot clone3 close_range membarrier memfd_create mknodat rseq
BindReadOnlyPaths=/opt/gha-hooks
BindReadOnlyPaths=/etc
