tests/snapshots/python_parity_unit_snapshots__dropin_30_cache_pool_ccache.snap
---
source: tests/python_parity_unit_snapshots.rs
assertion_line: 213
expression: "dropin(&r.drop_ins, \"30-cache-pool.conf\")"
---
[Service]
