tests/snapshots/python_parity_unit_snapshots__dropin_30_cache_pool_multi_binding.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: "dropin(&r.drop_ins, \"30-cache-pool.conf\")"
---
[Unit]
Requires=ghars-cache@test.service
After=ghars-cache@test.service

[Service]
Environment=SCCACHE_SERVER_UDS=/run/ghars/cache-test.sock
Environment=SCCACHE_NO_DAEMON=1
Environment=SCCACHE_CACHE_SIZE=100G
BindPaths=/var/cache/ghars/pools/test /run/ghars
