tests/snapshots/python_parity_unit_snapshots__dropin_40_network_open.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: "dropin(&r.drop_ins, \"40-network.conf\")"
---
[Service]
IPAddressAllow=10.0.0.0/8
IPAddressDeny=0.0.0.0/0
RestrictAddressFamilies=AF_INET AF_UNIX
